cabal-version:      2.4
name:               aoc23
version:            0.0.0.0

synopsis:           Advent of Code 2025
description:        Advent of Code 2025

license:            MIT
license-file:       LICENSE
author:             hellobye65536
maintainer:         boshwang1234@gmail.com

common common
    hs-source-dirs:   src
    default-language: GHC2024
    build-depends:    base ^>= 4.21
    ghc-options:
        -Wall

executable p1a
    import:           common
    main-is:          P1a.hs

executable p1b
    import:           common
    main-is:          P1b.hs

executable p2a
    import:           common
    main-is:          P2a.hs
    build-depends:
        text ^>= 2.1,

executable p2b
    import:           common
    main-is:          P2b.hs
    build-depends:
        text ^>= 2.1,

executable p3a
    import:           common
    main-is:          P3a.hs
    build-depends:
        text ^>= 2.1,

executable p3b
    import:           common
    main-is:          P3b.hs
    build-depends:
        text ^>= 2.1,

executable p4a
    import:           common
    main-is:          P4a.hs
    build-depends:
        text ^>= 2.1,
        array ^>= 0.5,

executable p4b
    import:           common
    main-is:          P4b.hs
    build-depends:
        text ^>= 2.1,
        array ^>= 0.5,

executable p5a
    import:           common
    main-is:          P5a.hs
    build-depends:
        text ^>= 2.1,

executable p5b
    import:           common
    main-is:          P5b.hs
    build-depends:
        text ^>= 2.1,

executable p6a
    import:           common
    main-is:          P6a.hs
    build-depends:
        text ^>= 2.1,

executable p6b
    import:           common
    main-is:          P6b.hs
    build-depends:
        text ^>= 2.1,
        split ^>= 0.2,

executable p7a
    import:           common
    main-is:          P7a.hs
    build-depends:
        text ^>= 2.1,
        vector ^>= 0.13,

executable p7b
    import:           common
    main-is:          P7b.hs
    build-depends:
        text ^>= 2.1,
        vector ^>= 0.13,

executable p8a
    import:           common
    main-is:          P8a.hs
    build-depends:
        text ^>= 2.1,
        vector ^>= 0.13,

executable p8b
    import:           common
    main-is:          P8b.hs
    build-depends:
        text ^>= 2.1,
        vector ^>= 0.13,

executable p9a
    import:           common
    main-is:          P9a.hs
    build-depends:
        text ^>= 2.1,

executable p9b
    import:           common
    main-is:          P9b.hs
    build-depends:
        text ^>= 2.1,
        array ^>= 0.5,
        vector ^>= 0.13,

executable p10a
    import:           common
    main-is:          P10a.hs
    build-depends:
        text ^>= 2.1,
        vector ^>= 0.13,

executable p10b
    import:           common
    main-is:          P10b.hs
    build-depends:
        text ^>= 2.1,
        vector ^>= 0.13,
        hashtables ^>= 1.4,
